# LegalEagle

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  package-lock.json  package.json  start.py
.github/agents/: architecture-reviewer.agent.md  code-reviewer.agent.md  coder.agent.md  e2e-validator.agent.md  explore.agent.md  tester.agent.md
.github/workflows/: deploy-extractor.yml  deploy.yml
client/: .env.example  AGENTS.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
client/src/: App.tsx  globals.d.ts  index.css  main.tsx  router.tsx
docs/: architecture.md  design-decisions.md  document-pipeline.md  index.md  ui-patterns.md  ui-requirements.md  ui-validation-plan.md
extractor/: .dockerignore  Dockerfile  ai_extractor.py  azure_extractor.py  classifier.py  config.py  main.py  ocr.py  providers.py  pyproject.toml  schemas.py  text_extraction.py
extractor/rule_extractors/: __init__.py  bank_statement.py  investment.py  mortgage.py  mortgage_payment.py  paystub.py  social_security_card.py  tax_return.py  utils.py  vehicle_loan.py  vehicle_title.py  w2.py
extractor/scripts/: eval.py
extractor/tests/: conftest.py  test_ai_extractor.py  test_auth_middleware.py  test_azure_extractor.py  test_classifier.py  test_gold_samples.py  test_health.py  test_main.py  test_ocr.py  test_pii_redactor.py  test_providers.py  test_rule_extractors.py  test_schemas.py  test_text_extraction.py
server/: AGENTS.md  drizzle.config.ts  eslint.config.js  package-lock.json  package.json  tsconfig.json
(+245 files in other folders)
